@@ -1,3 +1,12 @@
+	* [multipathd] convert get_lun_strings from ioctl to sysfs
+	  so we can benefit from strings persistency for failed
+	  paths
+	* [multipath] readconfig() to take only 8 char from vendor
+	  string (ake)
+	* [multipath] remove unecessery and wrong getuid == NULL
+	  check from devinfo() (ake)
+	* [multipathd] make readsector0 open path O_DIRECT
+	* [multipathd] sizeof(path) -> sizeof(struct path) (MikeC)
 	* [Makefile] don't try to install and uninstall libs
 	* [devmap_name] kill the wrong trailing '\n'
 	  (Mike Christie)
